# exceptions

./: CMakeLists.txt  README.md  config-builds  do-build  requirements.cmake
.circleci/: CMakeLists.txt  config.yml
include/felspar/: exceptions.hpp
include/felspar/exceptions/: bad_alloc.hpp  exception.hpp  length_error.hpp  logic_error.hpp  messaging_error.hpp  overflow_error.hpp  runtime_error.hpp  source_annotation.hpp  system_error.hpp  underflow_error.hpp
test/headers/: CMakeLists.txt  bad_alloc.cpp  exception.cpp  exceptions.cpp  length_error.cpp  logic_error.cpp  messaging_error.cpp  overflow_error.cpp  runtime_error.cpp  source_annotation.cpp  system_error.cpp  underflow_error.cpp
test/run/: CMakeLists.txt  bad_alloc.cpp  length_error.cpp  overflow.cpp  runtime.cpp  system.cpp  underflow.cpp
